# hpc_bench

./: .gitignore  README
ONETEP/compile/: CMakeLists.txt  CONTRIBUTING.markdown  Doxyfile  INSTALL  LICENCE  Makefile  README  RELEASE_NOTES  bitbucket-pipelines.yml  cmake.md  instructions
ONETEP/compile/c2_refdens/: C_c2.coreconf  C_c2.refconf  H_c2.refconf  N_c2.coreconf  N_c2.refconf  O_c2.coreconf  O_c2.refconf  P_c2.coreconf  P_c2.refconf  S_c2.coreconf  S_c2.refconf
ONETEP/compile/ci/docker_images/: README
ONETEP/compile/cmake/: flags.cmake
ONETEP/compile/config/: conf.RH6.intel  conf.RH6.pgi.gpu  conf.RH65.gfortran.intelmpi.omp.scalapack  conf.RH65.gfortran.intelmpi.omp.scalapack.big-endian  conf.RH65.gfortran.nompi.omp  conf.RH65.gfortran.openmpi.omp.scalapack  conf.RH65.intel  conf.RH65.intel16.nompi.omp  conf.RH65.intel16.omp.scalapack  conf.RH65.pgi_openmpi  conf.RH7.gfortran.intelmpi.omp.scalapack  conf.RH7.gfortran.openmpi3.omp  conf.RH7.gfortran492.intelmpi.omp.scalapack  conf.RH7.gfortran531.intelmpi.omp.scalapack  conf.RH7.gfortran731.intelmpi.omp.scalapack  conf.RH7.intel17.omp.scalapack  conf.RH7.intel18.omp.scalapack  conf.RH79.intel18.omp.scalapack  conf.RH79.intel19.omp.scalapack  conf.archer  conf.archer2_2022_cray  conf.archer2_2022_gfortran  conf.archer2_2022_gfortran_mkl  conf.avon  conf.cmth  conf.cmth_buildtest  conf.cmth_gfortran  conf.csc  conf.csd3-cpu  conf.cx1  conf.darwin  conf.darwin.hdf5  conf.gfortran.openmpi.omp.scalapack.noopt  conf.gfortran_mpi_mkl  conf.gfortran_omp_acml  conf.hawk_intel19_omp_scalapack_mpt  conf.hector  conf.i386_gfortran  conf.i386_ifc  conf.i386_nag  (+23 more)
ONETEP/compile/dl_mg/: CMakeLists.txt  LICENSE  Makefile  README.md  RELEASE_NOTES  TODO  test_mpi_robustness.py
ONETEP/compile/dl_mg/docs/: onetep_logs.txt
ONETEP/compile/dl_mg/docs/doxygen_doc/: Doxyfile_developer  (+1 more)
ONETEP/compile/dl_mg/src/: dl_mg.F90  dl_mg_alloc.F90  dl_mg_common_data.F90  dl_mg_common_params.inc  dl_mg_conjugate_gradient_method.F90  dl_mg_convergence_params.F90  dl_mg_defco_fd_mod.F90  dl_mg_defco_mod.F90  dl_mg_defco_utils_mod.F90  dl_mg_errors.F90  dl_mg_grids.F90  dl_mg_info.F90  dl_mg_kernels.F90  dl_mg_mpi.F90  dl_mg_mpi_header.F90  dl_mg_msg.F90  dl_mg_multigrid_method.F90  dl_mg_neutralisation_with_ions.F90  dl_mg_neutralisation_with_ions_params.inc  dl_mg_newton_method.F90  dl_mg_nonlinear_model.F90  dl_mg_params.F90  dl_mg_second_order_solvers.F90  dl_mg_stencil_coefficients.F90  dl_mg_timer.F90  dl_mg_types.F90  dl_mg_utils.F90  hello_mpi_header.F90
ONETEP/compile/dl_mg/utils/: check_q.f90  get_version_string.sh  grid_diagrams.f90  input  job.slm-template  main_mg.F90  mg_tests.F90  mg_utils.F90  pre-commit  run_test.sh  scaling_run_omp.pbs  test-job.slm-template  test_onetep_ls.F90  test_onetep_num.F90  test_suite.sh
ONETEP/compile/doc/: EDA.rst  EMFT_in_ONETEP.rst  Makefile  README_Doc.txt  VDW-correction.rst  conf.py  ddec.rst  hfx.rst  implicit_solvation_v3.rst  index.rst  index_gpu.rst  index_ground_state.rst  index_qmmm.rst  index_spectroscopy.rst  index_transition_states.rst  lr_tddft.rst  nbo_onetep.rst  nudged-elastic-band.rst  onetep_edft_documentation.rst  onetep_kernel_diis_documentation.rst  pseudoatomic_solver.rst  realspace_local_pseudo.rst  scissor_operator.rst  spectral_function_unfolding.rst  template_mod.F90  transport.rst
ONETEP/compile/elpa/: Makefile  config-f90.h  elpa1.F90  elpa2.F90
ONETEP/compile/hpc_resources/ARCHER2/: instructions_ARCHER2.docx  jobsubmit.ARCHER2.2022_central  jobsubmit.ARCHER2.2022_cray  jobsubmit.ARCHER2.2022_gfortran  jobsubmit.ARCHER2.2022_gfortran_mkl  qcsubmit.ARCHER2.2022_central  qcsubmit.ARCHER2.2022_cray  qcsubmit.ARCHER2.2022_gfortran  qcsubmit.ARCHER2.2022_gfortran_mkl
ONETEP/compile/hpc_resources/Hawk/: instructions_hawk.docx  jobsubmit.hawk_mpt.2021  qcsubmit.hawk_mpt.2021
ONETEP/compile/hpc_resources/Iridis5/: instructions_iridis5.docx  jobsubmit.iridis5.2021  qcsubmit.iridis5.2021
ONETEP/compile/hpc_resources/Michael/: instructions_michael.docx  jobsubmit.michael.2021  qcsubmit.michael.2021
ONETEP/compile/hpc_resources/RH79_desktops/: instructions_RH79_desktops.docx  run_all_tests.RH79.2021
ONETEP/compile/hpc_resources/Young/: instructions_young.docx  jobsubmit.young.2021  qcsubmit.young.2021
ONETEP/compile/pseudo/: boron.paw  carbon.core_wf  carbon.paw  hydrogen.paw  lithium.paw  nitrogen.paw  oxygen.paw  phosphorus.recpot  platinum.paw  platinum.recpot
ONETEP/compile/src/: CMakeLists.txt  Makefile  alloc_checker_macros.fi  alloc_checker_mod.F90  anharmonic_mod.F90  atom_mod.F90  augmentation_mod.F90  bandstructure_mod.F90  basis_mod.F90  bibliography_mod.F90  cdft_intermediate_cg_mod.F90  cell_grid_mod.F90  chebyshev_rep_mod.F90  classical_pot_mod.F90  comms_mod.F90  conduction_mod.F90  conduction_properties_mod.F90  constants_mod.F90  couplings_mod.F90  cutoff_coulomb_mod.F90  datatypes_mod.F90  ddec_mod.F90  dense_mod.F90  density_init_mod.F90  density_mod.F90  dftb_mod.F90  dftb_parameters_mod.F90  dftb_type_mod.F90  dma_mod.F90  dmft_mod.F90  eda_driver_supermol_mod.F90  eda_main_mod.F90  eels_mod.F90  eigenstates_mod.F90  eld_mod.F90  electronic_history_mod.F90  electronic_init_mod.F90  electronic_mod.F90  energy_and_force_mod.F90  ensemble_dft_mod.F90  (+124 more)
ONETEP/compile/tests/: .gitignore  ChangeLog  Makefile  README.test  jobconfig  userconfig
ONETEP/compile/tests/test06/: ethanedial.sw_ngwfs
ONETEP/compile/tests/test30/: c2h4-group_spin_diff-HUBBARDSCF.cdft
ONETEP/compile/tests/test52/: H2-du.cdft  H2-ud.cdft
ONETEP/compile/tests/test60/: QM_ammonium_in_10_MM_H2O.for_scf_dma.vmatrix  QM_ammonium_in_10_MM_H2O.mpoles_for_onetep
ONETEP/compile/tests/test61/: QM_acetonitrile_in_MM_H2O_K+.for_scf_dma.vmatrix  QM_acetonitrile_in_MM_H2O_K+.mpoles_for_onetep
ONETEP/compile/tests/test67/: QM_water_in_MM_water_with_rep_pot.for_dma.vmatrix  QM_water_in_MM_water_with_rep_pot.mpoles_for_onetep
ONETEP/compile/utils/: check_dependencies  check_use_clauses  check_whitespace  colorise  onetep_launcher  pull_request_checks  remove_ifdef_block
(+438 files in other folders)
